--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
-    <link rel="apple-touch-icon" href="/icon.svg?v=2" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>good days</title>
     <script>
