--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="hsl(84, 100%, 94%)" id="theme-color-meta" />
     <title>good days</title>
     <script>
       // Read saved theme from localStorage and set background BEFORE body paints
@@ -19,7 +20,13 @@
         h = h !== null ? h : '84';
         s = s !== null ? s : '100';
         l = l !== null ? l : '94';
-        document.write('<style>html,body{background-color:hsl(' + h + ',' + s + '%,' + l + '%)!important;margin:0;padding:0}</style>');
+        var bgColor = 'hsl(' + h + ',' + s + '%,' + l + '%)';
+        document.write('<style>html,body{background-color:' + bgColor + '!important;margin:0;padding:0}</style>');
+        // Update theme-color meta for Safari toolbar
+        document.addEventListener('DOMContentLoaded', function() {
+          var meta = document.getElementById('theme-color-meta');
+          if (meta) meta.setAttribute('content', bgColor);
+        });
       })();
     </script>
   </head>
