--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="hsl(84, 100%, 94%)" id="theme-color-meta" />
+    <meta property="og:title" content="good days" />
+    <meta property="og:description" content="your digital-analog journal oasis" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:type" content="website" />
     <title>good days</title>
     <script>
       // Read saved theme from localStorage and apply BEFORE body paints
