--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" id="theme-color-meta" content="hsl(84, 100%, 94%)" />
     <script>
       // Read saved theme from localStorage and apply BEFORE body paints
       (function() {
@@ -19,8 +20,8 @@
         s = s !== null ? s : '100';
         l = l !== null ? l : '94';
         var bgColor = 'hsl(' + h + ',' + s + '%,' + l + '%)';
-        // Write theme-color meta tag with correct value
-        document.write('<meta name="theme-color" content="' + bgColor + '" id="theme-color-meta" />');
+        // Update theme-color meta tag
+        document.getElementById('theme-color-meta').setAttribute('content', bgColor);
         // Set background immediately
         document.write('<style>html,body{background-color:' + bgColor + '!important;margin:0;padding:0}</style>');
       })();
