--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" id="theme-color-meta" content="hsl(84, 100%, 94%)" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <script>
       // Read saved theme from localStorage and apply BEFORE body paints
       (function() {
