--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <meta name="theme-color" id="theme-color-meta" content="hsl(84, 100%, 94%)" />
+    <meta name="theme-color" id="theme-color-meta" content="#e5ffc2" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <script>
       // Read saved theme from localStorage and apply BEFORE body paints
       (function() {
+        function hslToHex(h,s,l){s/=100;l/=100;var a=s*Math.min(l,1-l);function f(n){var k=(n+h/30)%12;var c=l-a*Math.max(Math.min(k-3,9-k,1),-1);return Math.round(255*c).toString(16).padStart(2,'0');}return'#'+f(0)+f(8)+f(4);}
         var h = localStorage.getItem('bgHue');
         var s = localStorage.getItem('bgSaturation');
         var l = localStorage.getItem('bgLightness');
-        h = h !== null ? h : '84';
-        s = s !== null ? s : '100';
-        l = l !== null ? l : '94';
+        h = h !== null ? parseFloat(h) : 84;
+        s = s !== null ? parseFloat(s) : 100;
+        l = l !== null ? parseFloat(l) : 94;
         var bgColor = 'hsl(' + h + ',' + s + '%,' + l + '%)';
-        document.getElementById('theme-color-meta').setAttribute('content', bgColor);
+        var hexColor = hslToHex(h, s, l);
+        document.getElementById('theme-color-meta').setAttribute('content', hexColor);
         document.write('<style>html,body{background-color:' + bgColor + '!important;margin:0;padding:0}</style>');
       })();
     </script>
